# ConnectFour-project-AI

./: .gitignore  README.md  pyproject.toml
Dokumentaatio/: Määrittelydokumentti.mkd  Viikkoraportti 1.mkd  Viikkoraportti 2.mkd  Viikkoraportti 3.mkd
testikansio/: tekstitesti.txt
