[project]
name = "algorithms-and-ai-project-gomoku"
version = "0.1.0"
description = ""
authors = [
    {name = "A5Beef",email = "edvintran@gmail.com"}
]
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pyinstaller (>=6.18.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
